# emailsender

./: CMakeLists.txt  README.rst
cmake/Modules/: FindLIBIDN.cmake
src/: c_curl.c  c_curl.h  c_emailsender.c  c_emailsender.h  main.c  yuno_emailsender.c  yuno_emailsender.h
